test/errors/error3.base
Invalid statement. All statements should be in the forms: "a = b; " or "_ = b(); " 
fun foo() {
   x-y = 1;
     ^ 
